--- a/package.json
+++ b/package.json
@@ -6,9 +6,25 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "0.27.2",
+    "bootstrap": "5.3.3",
+    "lodash": "4.17.21",
+    "nprogress": "0.2.0",
     "react": "^18.3.1",
+    "react-bootstrap": "2.10.5",
     "react-dom": "^18.3.1",
+    "react-icons": "5.3.0",
+    "react-paginate": "8.1.3",
+    "react-pro-sidebar": "^0.7.1",
+    "react-redux": "8.0.5",
+    "react-router-dom": "6.26.2",
     "react-scripts": "5.0.1",
+    "react-select": "5.4.0",
+    "react-toastify": "9.0.7",
+    "redux": "4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "6.0.0",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
