--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "5.3.0",
     "react-paginate": "8.1.3",
+    "react-perfect-scrollbar": "1.5.8",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "8.0.5",
     "react-router-dom": "6.26.2",
