--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lodash": "4.17.21",
     "nprogress": "0.2.0",
     "react": "^18.3.1",
+    "react-awesome-lightbox": "^1.8.1",
     "react-bootstrap": "2.10.5",
     "react-dom": "^18.3.1",
     "react-icons": "5.3.0",
@@ -26,6 +27,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "6.0.0",
     "redux-thunk": "^2.4.1",
+    "uuid": "8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
